--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,46 +1,60 @@
 ﻿@page "/fetchdata"
 
 @using GenerosBlazorApp.Data
+@using  GenerosBlazorApp.BLL
 @inject WeatherForecastService ForecastService
 
-<h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from a service.</p>
-
-@if (forecasts == null)
+@if (lista.Count() == 0)
 {
     <p><em>Loading...</em></p>
 }
 else
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
+
+    <div class="container">
+        <p class="display-3 text-center ">Lista de Generos</p>
+        <table class="table">
+            <thead class="thead-dark">
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <th>Id</th>
+                    <th>Genero</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @{foreach (var obj in lista)
+                    {
+                        <tr>
+                            <th>@obj.GeneroId</th>
+                            <td>@obj.Nombre</td>
+                            <td><a href="RegistroGenero/@obj.GeneroId">Editar</a>|<a href="/Eliminar/@obj.GeneroId">Eliminar</a></td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+
+    </div>
+
 }
+
 
 @code {
     private WeatherForecast[] forecasts;
 
+    public List<Genero> lista = new List<Genero>();
+
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        RepositorioBase<Genero> db = new RepositorioBase<Genero>();
+
+        try
+        {
+            lista = db.GetList(A => true);
+        }
+        catch (Exception) { throw; }
+
+
     }
 }
